scripts/nullaway/original/urlc7e4b8c1f2_normchan_craps_simulator_tgz-pJ8-normchan_crapssim_SimulatorJ8.txt
../original/urlc7e4b8c1f2_normchan_craps_simulator_tgz-pJ8-normchan_crapssim_SimulatorJ8/src/normchan/crapssim/engine/Layout.java:108: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../original/urlc7e4b8c1f2_normchan_craps_simulator_tgz-pJ8-normchan_crapssim_SimulatorJ8/src/normchan/crapssim/engine/Layout.java:119: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../original/urlc7e4b8c1f2_normchan_craps_simulator_tgz-pJ8-normchan_crapssim_SimulatorJ8/src/normchan/crapssim/engine/Player.java:14: error: [NullAway] initializer method does not guarantee @NonNull field strategy (line 12) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Player(int balance) {
	       ^
    (see http://t.uber.com/nullaway )
../original/urlc7e4b8c1f2_normchan_craps_simulator_tgz-pJ8-normchan_crapssim_SimulatorJ8/src/normchan/crapssim/Simulator.java:23: error: [NullAway] assigning @Nullable expression to @NonNull field
	private static Tracker tracker = null;
	                       ^
    (see http://t.uber.com/nullaway )
../original/urlc7e4b8c1f2_normchan_craps_simulator_tgz-pJ8-normchan_crapssim_SimulatorJ8/src/normchan/crapssim/Simulator.java:36: error: [NullAway] passing @Nullable parameter 'dice' where @NonNull is required
				GameManager manager = new GameManager(dice, playerStrategyClass);
				                                      ^
    (see http://t.uber.com/nullaway )
../original/urlc7e4b8c1f2_normchan_craps_simulator_tgz-pJ8-normchan_crapssim_SimulatorJ8/src/normchan/crapssim/simulation/Controller.java:7: error: [NullAway] @NonNull field manager not initialized
	protected GameManager manager;
	                      ^
    (see http://t.uber.com/nullaway )
../original/urlc7e4b8c1f2_normchan_craps_simulator_tgz-pJ8-normchan_crapssim_SimulatorJ8/src/normchan/crapssim/simulation/strategy/ProgressiveComeOutHedgeStrategy10.java:23: error: [NullAway] assigning @Nullable expression to @NonNull field
	private List<Come> comeBets = null;
	                   ^
    (see http://t.uber.com/nullaway )
../original/urlc7e4b8c1f2_normchan_craps_simulator_tgz-pJ8-normchan_crapssim_SimulatorJ8/src/normchan/crapssim/simulation/strategy/ProgressiveComeOutHedgeStrategy10.java:24: error: [NullAway] assigning @Nullable expression to @NonNull field
	private ResultTracker tracker = null;
	                      ^
    (see http://t.uber.com/nullaway )
../original/urlc7e4b8c1f2_normchan_craps_simulator_tgz-pJ8-normchan_crapssim_SimulatorJ8/src/normchan/crapssim/simulation/strategy/ProgressiveComeOutHedgeStrategy10.java:63: error: [NullAway] assigning @Nullable expression to @NonNull field
				this.comeBets = null;
				              ^
    (see http://t.uber.com/nullaway )
../original/urlc7e4b8c1f2_normchan_craps_simulator_tgz-pJ8-normchan_crapssim_SimulatorJ8/src/normchan/crapssim/simulation/strategy/ProgressiveComeOutHedgeStrategy10.java:74: error: [NullAway] assigning @Nullable expression to @NonNull field
				tracker = null;
				        ^
    (see http://t.uber.com/nullaway )
../original/urlc7e4b8c1f2_normchan_craps_simulator_tgz-pJ8-normchan_crapssim_SimulatorJ8/src/normchan/crapssim/simulation/strategy/ProgressiveComeOutHedgeStrategy10.java:80: error: [NullAway] assigning @Nullable expression to @NonNull field
				this.comeBets = null;
				              ^
    (see http://t.uber.com/nullaway )
../original/urlc7e4b8c1f2_normchan_craps_simulator_tgz-pJ8-normchan_crapssim_SimulatorJ8/src/normchan/crapssim/simulation/strategy/ProgressiveComeOutHedgeStrategy10.java:88: error: [NullAway] assigning @Nullable expression to @NonNull field
					tracker = null;
					        ^
    (see http://t.uber.com/nullaway )
../original/urlc7e4b8c1f2_normchan_craps_simulator_tgz-pJ8-normchan_crapssim_SimulatorJ8/src/normchan/crapssim/simulation/strategy/ProgressiveHedgeStrategy10.java:11: error: [NullAway] assigning @Nullable expression to @NonNull field
	private Lay hedgeBet = null;
	            ^
    (see http://t.uber.com/nullaway )
../original/urlc7e4b8c1f2_normchan_craps_simulator_tgz-pJ8-normchan_crapssim_SimulatorJ8/src/normchan/crapssim/simulation/strategy/ProgressiveHedgeStrategy10.java:27: error: [NullAway] assigning @Nullable expression to @NonNull field
			this.hedgeBet = null;
			              ^
    (see http://t.uber.com/nullaway )
../original/urlc7e4b8c1f2_normchan_craps_simulator_tgz-pJ8-normchan_crapssim_SimulatorJ8/src/normchan/crapssim/simulation/strategy/ProgressiveHedgeStrategy10.java:35: error: [NullAway] assigning @Nullable expression to @NonNull field
			this.hedgeBet = null;
			              ^
    (see http://t.uber.com/nullaway )
../original/urlc7e4b8c1f2_normchan_craps_simulator_tgz-pJ8-normchan_crapssim_SimulatorJ8/src/normchan/crapssim/simulation/strategy/ProgressiveHedgeStrategy10.java:41: error: [NullAway] assigning @Nullable expression to @NonNull field
				this.hedgeBet = null;
				              ^
    (see http://t.uber.com/nullaway )
../original/urlc7e4b8c1f2_normchan_craps_simulator_tgz-pJ8-normchan_crapssim_SimulatorJ8/src/normchan/crapssim/simulation/tracker/PlayerTracker.java:36: error: [NullAway] initializer method does not guarantee @NonNull field stats (line 30) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public PlayerTracker(GameManager manager, int initialBalance) {
	       ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: ../original/urlc7e4b8c1f2_normchan_craps_simulator_tgz-pJ8-normchan_crapssim_SimulatorJ8/src/normchan/crapssim/Simulator.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
17 errors
